Sonar fix, method refectoring to reduce complexity